--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-        <a href="https://discordapp.com/oauth2/authorize?client_id=422167273881731082&permissions=8&scope=bot&response_type=code&redirect_uri=https%3A%2F%2Falexapps99.github.io%2FShrekBot" class="btn">Get ShrekBot on your server!</a>
+        <a href="https://alexapps99.github.io/ShrekBot/invite" class="btn">Get ShrekBot on your server!</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
