--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 ---
 ---
-$header-bg-color: #ob6623;
+$header-bg-color: #0b6623;
 $header-bg-color-secondary: #5c452d;
 
 @import "{{ site.theme }}";
